# Rust-Webhook-Transformer

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  config.sample.yaml
src/: main.rs  transformer.rs
