[package]
name = "rust-webhook-transformer"
version = "0.1.13"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.13.0"
env_logger = "0.11.9"
futures = "0.3.32"
log = "0.4.29"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_bw = "2.5.2"
tokio = "1.49.0"
