[package]
name = "rust-webhook-transformer"
version = "0.1.15"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.14.0"
env_logger = "0.11.11"
futures = "0.3.32"
log = "0.4.33"
reqwest = "0.13.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_bw = "2.5.6"
tokio = "1.52.3"
